--- a/WpfStudentChat/Views/Windows/EditUserWindow.xaml
+++ b/WpfStudentChat/Views/Windows/EditUserWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
         xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
         mc:Ignorable="d"
-        Title="EditUserWindow" Height="400" Width="400"
+        Title="编辑用户" Height="400" Width="400"
         WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance Type=local:EditUserWindow}">
 
