添加好友请求圆点, 修复excel导入bug, 增加ai聊天

--- a/WpfStudentChat/Views/Pages/ContactsFriendPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsFriendPage.xaml
@@ -45,10 +45,10 @@
                     <StackPanel Orientation="Horizontal"
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Center">
-                        <Button Content="Chat"
+                        <Button Content="聊天"
                                 Padding="15 6"
                                 Command="{Binding StartChatCommand}"/>
-                        <Button Content="Delete"
+                        <Button Content="删除"
                                 Padding="15 6"
                                 Margin="8 0 0 0 "
                                 Command="{Binding DeleteContactCommand}"/>
