--- a/WpfStudentChat/Views/Pages/SettingsPage.xaml
+++ b/WpfStudentChat/Views/Pages/SettingsPage.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:cvt="clr-namespace:WpfStudentChat.Converters"
-    Title="SettingsPage"
+    xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
+    Title="设置"
     d:DataContext="{d:DesignInstance local:SettingsPage,IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -17,7 +18,17 @@
 
     </Page.Resources>
 
-    <StackPanel>
-
-    </StackPanel>
+    <ws:StackPanel HorizontalAlignment="Left"
+                   VerticalAlignment="Top"
+                   Orientation="Horizontal"
+                   Spacing="10">
+        <ui:Button Content="修改密码"
+                   Padding="10"
+                   FontSize="18"
+                   Command="{Binding ViewModel.SetPasswordCommand}"/>
+        <ui:Button Content="退出登录"
+                   Padding="10"
+                   FontSize="18"
+                   Command="{Binding LogoutCommand}"/>
+    </ws:StackPanel>
 </Page>
