--- a/WpfStudentChat/Views/Pages/ContactsGroupPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsGroupPage.xaml
@@ -46,13 +46,15 @@
                     <StackPanel Orientation="Horizontal"
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Center">
-                        <Button Content="Chat"
-                                Padding="15 6"
-                                Command="{Binding StartChatCommand}"/>
-                        <Button Content="Delete"
-                                Padding="15 6"
-                                Margin="8 0 0 0 "
-                                Command="{Binding DeleteContactCommand}"/>
+                        <ui:Button Content="Chat"
+                                   Padding="15 6"
+                                   Appearance="Primary"
+                                   Command="{Binding StartChatCommand}"/>
+                        <ui:Button Content="Delete"
+                                   Padding="15 6"
+                                   Margin="8 0 0 0"
+                                   Appearance="Danger"
+                                   Command="{Binding DeleteContactCommand}"/>
                     </StackPanel>
                 </Grid>
             </StackPanel>
