--- a/WpfStudentChat/Views/Pages/ContactsPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsPage.xaml
@@ -39,26 +39,30 @@
             <ScrollViewer Name="ContactsScrollViewer">
                 <StackPanel Orientation="Vertical">
                     <StackPanel>
-                        <Button HorizontalAlignment="Stretch"
-                                Content="添加好友/群聊"
-                                Padding="0 3"
-                                Command="{Binding ShowSearchWindowCommand}"/>
-                        <Button HorizontalAlignment="Stretch"
-                                Content="创建群聊"
-                                Padding="0 3"
-                                Margin="0 3 0 0"
-                                Command="{Binding ShowCreateGroupWindowCommand}"/>
-                        <Button Name="FriendRequestButton"
-                                HorizontalAlignment="Stretch"
-                                Content="好友请求"
-                                Padding="0 3"
-                                Margin="0 3 0 0"
-                                Command="{Binding ShowFriendRequestsPageCommand}"/>
-                        <Button HorizontalAlignment="Stretch"
-                                Content="群聊请求"
-                                Padding="0 3"
-                                Margin="0 3 0 0"
-                                Command="{Binding ShowGroupRequestsPageCommand}"/>
+                        <ui:Button HorizontalAlignment="Stretch"
+                                   Content="添加好友/群聊"
+                                   Padding="0 3"
+                                   Appearance="Primary"
+                                   Command="{Binding ShowSearchWindowCommand}"/>
+                        <ui:Button HorizontalAlignment="Stretch"
+                                   Content="创建群聊"
+                                   Padding="0 3"
+                                   Margin="0 3 0 0"
+                                   Appearance="Primary"
+                                   Command="{Binding ShowCreateGroupWindowCommand}"/>
+                        <ui:Button Name="FriendRequestButton"
+                                   HorizontalAlignment="Stretch"
+                                   Content="好友请求"
+                                   Padding="0 3"
+                                   Margin="0 3 0 0"
+                                   Appearance="Primary"
+                                   Command="{Binding ShowFriendRequestsPageCommand}"/>
+                        <ui:Button HorizontalAlignment="Stretch"
+                                   Content="群聊请求"
+                                   Padding="0 3"
+                                   Margin="0 3 0 0"
+                                   Appearance="Primary"
+                                   Command="{Binding ShowGroupRequestsPageCommand}"/>
                     </StackPanel>
 
                     <Border Height=".8"
