--- a/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
@@ -246,6 +246,7 @@
                 <ui:Button Grid.Row="1"
                            VerticalAlignment="Bottom"
                            HorizontalAlignment="Right"
+                           Appearance="Primary"
                            Margin="12"
                            Content="发送"
                            Command="{Binding SendMessageCommand}"/>
