提交密码框

--- a/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/PrivateMessagesPage.xaml
@@ -240,7 +240,7 @@
                     <ui:Button Content="发送图片" Padding="3 2"
                                Appearance="Secondary"
                                Command="{Binding OpenSendImageWindowCommand}"/>
-                    <ui:Button Content="发送文件" Padding="3 2"/>
+                    <ui:Button Content="发送文件" Padding="3 2" Command="{Binding OpenSendFileDialogCommand}"/>
                 </ws:StackPanel>
                 <ui:TextBox Grid.Row="1"
                             Margin="0 1 0 0"
