--- a/WpfStudentChat/Views/Windows/SetPasswordWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SetPasswordWindow.xaml
@@ -11,7 +11,8 @@
         mc:Ignorable="d"
         Title="修改密码" Height="240" Width="280"
         ResizeMode="NoResize"
-        d:DataContext="{d:DesignInstance Type=local:SetPasswordWindow}">
+        d:DataContext="{d:DesignInstance Type=local:SetPasswordWindow}"
+        WindowStartupLocation="CenterOwner">
 
     <Window.Resources>
         <Style TargetType="TextBlock">
@@ -27,7 +28,7 @@
                 <TextBlock Text="旧密码:  " Width="80" />
                 <ui:PasswordBox Width="150">
                     <b:Interaction.Behaviors>
-                        <mb:PasswordBoxBehavior Password="{Binding OldPassword}"/>
+                        <mb:PasswordBoxBehavior Password="{Binding OldPassword,Mode=TwoWay}"/>
                     </b:Interaction.Behaviors>
                 </ui:PasswordBox>
             </StackPanel>
@@ -35,7 +36,7 @@
                 <TextBlock Text="新密码:  " Width="80"  />
                 <ui:PasswordBox Width="150">
                     <b:Interaction.Behaviors>
-                        <mb:PasswordBoxBehavior Password="{Binding NewPassword}"/>
+                        <mb:PasswordBoxBehavior Password="{Binding NewPassword,Mode=TwoWay}"/>
                     </b:Interaction.Behaviors>
                 </ui:PasswordBox>
             </StackPanel>
@@ -43,7 +44,7 @@
                 <TextBlock Text="确认新密码:  " Width="80"  />
                 <ui:PasswordBox Width="150">
                     <b:Interaction.Behaviors>
-                        <mb:PasswordBoxBehavior Password="{Binding New2Password}"/>
+                        <mb:PasswordBoxBehavior Password="{Binding New2Password,Mode=TwoWay}"/>
                     </b:Interaction.Behaviors>
                 </ui:PasswordBox>
             </StackPanel>
