--- a/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
@@ -113,12 +113,15 @@
                                         </b:Interaction.Behaviors>
                                     </ws:Image>
 
+                                    <!-- 消息框 -->
                                     <StackPanel x:Name="MessageContents"
                                                 Grid.Column="2"
                                                 HorizontalAlignment="Left">
-                                        <ui:Card Padding="8 8 8 0">
+                                        <ui:Card x:Name="Card"
+                                                 Padding="8 8 8 0">
                                             <StackPanel>
-                                                <TextBox Margin="0 0 0 8"
+                                                <TextBox x:Name="MessageTextBox"
+                                                         Margin="0 0 0 8"
                                                          IsReadOnly="True"
                                                          Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                                          Background="Transparent"
@@ -204,6 +207,7 @@
                                                 </ItemsControl>
                                             </StackPanel>
                                         </ui:Card>
+                                        <TextBlock Text="{Binding SentTime,StringFormat='{}{0:yyyy/MM/dd HH:mm:ss}'}" />
                                     </StackPanel>
                                 </Grid>
                                 <DataTemplate.Triggers>
@@ -211,6 +215,8 @@
                                                  Value="True">
                                         <Setter TargetName="Avatar" Property="Grid.Column" Value="4"/>
                                         <Setter TargetName="MessageContents" Property="HorizontalAlignment" Value="Right"/>
+                                        <Setter TargetName="Card" Property="Control.Background" Value="DodgerBlue"/>
+                                        <Setter TargetName="MessageTextBox" Property="Control.Foreground" Value="White"/>
                                     </DataTrigger>
                                 </DataTemplate.Triggers>
                             </DataTemplate>
@@ -238,10 +244,11 @@
                             AcceptsReturn="True"
                             TextWrapping="Wrap"
                             BorderThickness="0 1 0 0"
-                            Text="{Binding ViewModel.TextInput,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
-                    <ui:TextBox.InputBindings>
-                        <KeyBinding Gesture="Control+Enter" Command="{Binding SendMessageCommand}"/>
-                    </ui:TextBox.InputBindings>
+                            Text="{Binding ViewModel.TextInput,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                            PreviewKeyDown="TextBox_PreviewKeyDown">
+                    <!--<ui:TextBox.InputBindings>
+                    <KeyBinding Gesture="Control+Enter" Command="{Binding SendMessageCommand}"/>
+                    </ui:TextBox.InputBindings>-->
                 </ui:TextBox>
                 <ui:Button Grid.Row="1"
                            VerticalAlignment="Bottom"
