--- a/WpfStudentChat/Views/Windows/SendImageWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SendImageWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:myvc="clr-namespace:WpfStudentChat.Converters"
         mc:Ignorable="d"
         Title="发送图片" Height="450" Width="800"
         WindowStartupLocation="CenterOwner"
@@ -32,7 +33,7 @@
                 <ws:Image MaxWidth="300"
                           MaxHeight="400"
                           CornerRadius="5"
-                          Source="{Binding ViewModel.ImagePath,Converter={StaticResource StringToImageSourceConverter}}"
+                          Source="{Binding ViewModel.ImagePath,Converter={x:Static myvc:MyStringToImageSourceConverter.Instance}}"
                           Background="Transparent"
                           BorderThickness="1"
                           BorderBrush="Gray">
